--- a/ntlp.ipynb
+++ b/ntlp.ipynb
@@ -37,6 +37,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8a249774",
+   "metadata": {},
+   "source": [
+    "# https://www.kaggle.com/datasets/mfaaris/spotify-app-reviews-2022"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "7413151a",
@@ -420,6 +429,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03846198",
    "metadata": {},
@@ -492,6 +502,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b773ffa6",
    "metadata": {},
@@ -831,6 +842,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b8c3fab",
    "metadata": {},
@@ -1020,6 +1032,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e6e1a7b",
    "metadata": {},
@@ -1080,6 +1093,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2bbc67f6",
    "metadata": {},
@@ -1220,6 +1234,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "61fe8d49",
    "metadata": {},
@@ -1228,6 +1243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48e5d6f6",
    "metadata": {},
@@ -1250,6 +1266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d9f068d",
    "metadata": {},
@@ -1355,6 +1372,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c0ed666",
    "metadata": {},
@@ -1462,6 +1480,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ca208980",
    "metadata": {},
@@ -1575,6 +1594,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0922e1ed",
    "metadata": {},
@@ -1675,6 +1695,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03faf9a2",
    "metadata": {},
@@ -1683,6 +1704,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dad7ae39",
    "metadata": {},
@@ -2107,6 +2129,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1dd3f874",
    "metadata": {},
@@ -2584,6 +2607,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "58352090",
    "metadata": {},
